# go-prototype-0000001

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: curator-action.yml  run-agent.yml
.github/workflows/: run-agent.yml
docs/: index.html
docs/assets/: _panel-repro.html  _repro.html  curators.json  figure-thumb.js  landing.js  styles.css  viewer.js
docs/runs/20260514t191830z/: curator_intent.json  model.yaml  provenance.json  viewer.json
docs/runs/demo/: index.html  model.yaml  provenance.json  viewer.json
docs/runs/figure1-004/: curator_intent.json  model.yaml  orchestrator_events.json  (+3 more)
journal/: append-prompt.py  prompts.md
knowledge/: SOURCES.md  go-curation-guidelines.md  go-curation-rules.yaml
knowledge/research/: figure-to-intent.md
knowledge/tools/: consolidate_extracts.py  parse_wiki_export.py  validate_curies.py
src/gocam_prototype/: __init__.py  alliance.py  builder.py  celltype.py  cli.py  curators.py  demo.py  eco.py  go_api.py  golr.py  llm.py  orchestrator.py  planning.py  provenance.py  validate.py  viewer.py  vision.py
tests/: test_alliance.py  test_builder.py  test_celltype.py  test_cli.py  test_demo.py  test_go_api.py  test_golr.py  test_llm.py  test_orchestrator.py  test_planning.py  test_provenance.py  test_smoke.py  test_validate.py  test_viewer.py  test_vision.py
tests/fixtures/: alliance_autocomplete.json  alliance_gene.json  alliance_orthologs.json  alliance_search.json  go_cam_model.json  go_gene_function.json  go_term.json  go_term_genes.json  golr_annotation.json
(+93 files in other folders)
