[project]
name = "gocam-prototype"
version = "0.0.1"
description = "GO-CAM curation prototype: an LLM agent constructs interactive GO-CAMs with per-element provenance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "The Gene Ontology Consortium" }]
dependencies = [
    "anthropic[vertex]>=0.40",
    "python-dotenv>=1.0",
    "gocam>=0.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gocam_prototype"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
